# lux-communication

./: .gitignore  CMakeLists.txt
builtin_msgs/: CMakeLists.txt
builtin_msgs/include/lux/communication/: pb_st_converter.hpp
builtin_msgs/include/lux/communication/builtin_msgs/: load_image.hpp  matrix_tools.hpp  pb_st_converter.hpp  timestamp_tools.hpp
builtin_msgs/include/lux/communication/builtin_msgs/common_msgs/: matrix3.st.h  matrixn.st.h  timestamp.st.h  vector2.st.h  vector3.st.h  vector4.st.h  vector5.st.h  vectorn.st.h
builtin_msgs/include/lux/communication/builtin_msgs/geometry_msgs/: accel.st.h  point.st.h  pose.st.h  pose_stamped.st.h  quaternion.st.h  transform.st.h  transform_stamped.st.h  twist.st.h
builtin_msgs/include/lux/communication/builtin_msgs/sensor_msgs/: camera_info.st.h  camera_parameters.st.h  image.st.h  image_group.st.h  imu.st.h  (+6 more)
builtin_msgs/msgs/lux/common_msgs/: timestamp.proto
builtin_msgs/msgs/lux/geometry_msgs/: point.proto  pose.proto  quaternion.proto
builtin_msgs/msgs/lux/sensor_msgs/: binocular_image.proto  image.proto  image_group.proto  imu.proto
builtin_msgs/src/: load_image.cpp  timestamp_tools.cpp
builtin_msgs/src/converter/common_msgs/: matrix3.cpp  matrixn.cpp  timestamp.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vector5.cpp  vectorn.cpp
builtin_msgs/src/converter/geometry_msgs/: accel.cpp  point.cpp  pose.cpp  pose_stamped.cpp  quaternion.cpp  transform.cpp  transform_stamped.cpp  twist.cpp
builtin_msgs/src/converter/sensor_msgs/: camera_parameters.cpp  image.cpp  image_group.cpp  image_group_stamped.cpp  image_stamped.cpp  imu.cpp  imu_parameters.cpp  imu_stamped.cpp  navsat.cpp  navsat_stamped.cpp
builtin_msgs/test/: CMakeLists.txt  conversion_test.cpp
node/: CMakeLists.txt  README.md
node/include/lux/communication/: CallbackGroup.hpp  CallbackGroupBase.hpp  ChannelKind.hpp  Domain.hpp  ExecEntry.hpp  Executor.hpp  ExecutorBase.hpp  Hash.hpp  ITopicHolder.hpp  IoThread.hpp  MessagePool.hpp  MessageTraits.hpp  Node.hpp  NodeBase.hpp  NodeOptions.hpp  PublishOptions.hpp  Publisher.hpp  PublisherBase.hpp  QoSChecker.hpp  QoSProfile.hpp  QoSProfiles.hpp  Queue.hpp  ReorderBuffer.hpp  SubscribeOptions.hpp  Subscriber.hpp  SubscriberBase.hpp  TimeExecEntry.hpp  TokenBucket.hpp  TopicBase.hpp  TransportSelector.hpp  UdpMultiCast.hpp
node/include/lux/communication/core/: CallbackGroupInterface.hpp  Domain.hpp  NodeInterface.hpp  PublisherInterface.hpp  Queue.hpp  Registry.hpp  SubscriberInterface.hpp
node/include/lux/communication/discovery/: DiscoveryService.hpp
node/include/lux/communication/executor/: MultiThreadedExecutor.hpp  SeqOrderedExecutor.hpp  SingleThreadedExecutor.hpp  TimeOrderedExecutor.hpp
node/include/lux/communication/interprocess/: Node.hpp  Publisher.hpp  Subscriber.hpp  UdpMultiCast.hpp  ZmqPubSub.hpp
node/include/lux/communication/intraprocess/: Executor.hpp  ITopicHolder.hpp  Node.hpp  Publisher.hpp  Subscriber.hpp  Topic.hpp
node/include/lux/communication/introprocess/: CallbackGroup.hpp  Config.hpp  Core.hpp  Domain.hpp  Executor.hpp  ITopicHolder.hpp  Node.hpp  Publisher.hpp  Queue.hpp  RcBuffer.hpp  Subscriber.hpp  SubscriberBase.hpp  Topic.hpp
node/include/lux/communication/platform/: NetSocket.hpp  PlatformDefs.hpp  SharedMemory.hpp
node/include/lux/communication/serialization/: Serializer.hpp
node/include/lux/communication/transport/: CpuRelax.hpp  FragmentAssembler.hpp  FragmentHeader.hpp  FragmentSender.hpp  FrameHeader.hpp  Handshake.hpp  IoReactor.hpp  LoanedMessage.hpp  NetConstants.hpp  ShmDataPool.hpp  ShmNotify.hpp  ShmRingBuffer.hpp  ShmRingReader.hpp  ShmRingWriter.hpp  TcpTransportReader.hpp  TcpTransportWriter.hpp  UdpTransportReader.hpp  UdpTransportWriter.hpp
node/include/lux/communication/unified/: Node.hpp  Publisher.hpp  Subscriber.hpp
node/pinclude/lux/communication/: CallbackGroupBase.hpp  IntroProcessNodeImpl.hpp  NodeBase.hpp  NodeGroup.hpp  NodeImpl.hpp  PublisherBase.hpp  SubscriberBase.hpp  TopicBase.hpp  UdpMultiCast.hpp
node/pinclude/lux/communication/discovery/: DiscoveryPacket.hpp  MulticastAnnouncer.hpp  ShmRegistry.hpp  ShmRegistryDefs.hpp
node/src/: CallbackGroup.cpp  CallbackGroupBase.cpp  Domain.cpp  Executor.cpp  ExecutorBase.cpp  ITopicHolder.cpp  IoThread.cpp  Node.cpp  NodeBase.cpp  Publisher.cpp  PublisherBase.cpp  Subscriber.cpp  SubscriberBase.cpp  TimeExecEntry.cpp  TokenBucket.cpp  TopicBase.cpp  UdpMultiCastImplPosix.cpp  UdpMultiCastImplWin.cpp  ZmqContext.cpp  interprocess_utils.cpp
node/src/core/: CallbackGroupInterface.cpp  Domain.cpp  NodeInterface.cpp  PublisherInterface.cpp  SubscriberInterface.cpp
node/src/discovery/: DiscoveryService.cpp  MulticastAnnouncer.cpp  ShmRegistry.cpp
node/src/executor/: MultiThreadedExecutor.cpp  SeqOrderedExecutor.cpp  SingleThreadedExecutor.cpp  TimeOrderedExecutor.cpp
node/src/interprocess/: Node.cpp  UdpMultiCastImplPosix.cpp  UdpMultiCastImplWin.cpp  utils.cpp
node/src/intraprocess/: Executor.cpp  ITopicHolder.cpp  Node.cpp
node/src/introprocess/: Core.cpp  Node.cpp
node/src/platform/: NetSocketPosix.cpp  NetSocketWin.cpp  PlatformDefsPosix.cpp  PlatformDefsWin.cpp  SharedMemoryPosix.cpp  SharedMemoryWin.cpp
node/src/transport/: FragmentAssembler.cpp  FragmentSender.cpp  IoReactorPosix.cpp  IoReactorWin.cpp  ShmDataPool.cpp  ShmNotifyPosix.cpp  ShmNotifyWin.cpp  ShmRingReader.cpp  ShmRingWriter.cpp  TcpTransportReader.cpp  TcpTransportWriter.cpp  UdpTransportReader.cpp  UdpTransportWriter.cpp
node/src/unified/: Node.cpp
node/test/: CMakeLists.txt  communication_intra_inter_test.cpp  discovery_test.cpp  executor_benchmark_test.cpp  executor_feature_test.cpp  executor_interprocess_test.cpp  interprocess_performance_test.cpp  interprocess_publisher.cpp  interprocess_spin_test.cpp  loopback_optimization_test.cpp  net_transport_test.cpp  node_test.cpp  qos_test.cpp  seq_order_test.cpp  shm_transport_test.cpp  simple_test.cpp  timeorder_executor_test.cpp  unified_transport_test.cpp
protobuf/: CMakeLists.txt
protobuf/cmake/: component_proto_tools.cmake
(+27 files in other folders)
